--- a/_posts/2022-06-19-Solved.acCLASS뿌시기(2).md
+++ b/_posts/2022-06-19-Solved.acCLASS뿌시기(2).md
@@ -1,7 +1,7 @@
 ---
 layout: single
 title: "[솔크뿌] Solved.ac CLASS 뿌시기(2)"
-excerpt: "CLASS 3 : p11726, p, p"
+excerpt: "CLASS 3 : p11726, p2579"
 date: 2022-06-19
 last_modified_at: 2022-06-19
 toc: true
@@ -101,5 +101,3 @@ public class p2579 {
 
 ```  
 -->
-
-
