--- a/_posts/2022-06-18-Solved.acCLASS뿌시기-day1.md
+++ b/_posts/2022-06-18-Solved.acCLASS뿌시기-day1.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[솔크뿌] Solved.ac CLASS 뿌시기(1)"
+title: "[솔크뿌] Solved.ac CLASS 뿌시기 - day1"
 excerpt: "CLASS 3 : p11047, p2178, p2667"
 date: 2022-06-18
 last_modified_at: 2022-06-18
