--- a/_posts/2022-06-18-Solved.acCLASS뿌시기.md
+++ b/_posts/2022-06-18-Solved.acCLASS뿌시기.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[솔크뿌] Solved.ac CLASS 뿌시기 시작"
+title: "[솔크뿌] Solved.ac CLASS 뿌시기"
 excerpt: "Solved.ac CLASS 뿌시기"
 date: 2022-06-18
 last_modified_at: 2022-06-18
