--- a/_posts/2022-06-19-Solved.acCLASS뿌시기-day2.md
+++ b/_posts/2022-06-19-Solved.acCLASS뿌시기-day2.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[솔크뿌] Solved.ac CLASS 뿌시기(2)"
+title: "[솔크뿌] Solved.ac CLASS 뿌시기 - day2"
 excerpt: "CLASS 3 : p11726, p2579"
 date: 2022-06-19
 last_modified_at: 2022-06-19
