--- a/_posts/2022-06-19-Solved.acCLASS뿌시기(2).md
+++ b/_posts/2022-06-19-Solved.acCLASS뿌시기(2).md
@@ -1,7 +1,7 @@
 ---
 layout: single
 title: "[솔크뿌] Solved.ac CLASS 뿌시기(2)"
-excerpt: "CLASS 3 : p11726, p2579"
+excerpt: "CLASS 3 : p11726, p2579, p9461"
 date: 2022-06-19
 last_modified_at: 2022-06-19
 toc: true
@@ -91,13 +91,38 @@ public class p2579 {
 }
 ```
 
-<!-- ## 번 - 
-문제 링크 : [https://www.acmicpc.net/problem/#](https://www.acmicpc.net/problem/#) -->
+## 9461번 - 파도반 수열
+문제 링크 : [https://www.acmicpc.net/problem/9461](https://www.acmicpc.net/problem/9461)
 
-<!-- image -->
+![image](https://user-images.githubusercontent.com/60471550/174452452-4723b549-fab6-42c2-a66c-ccd468c178da.png)
 
-<!-- 
 ```java
+import java.io.*;
 
+public class p9461 {
+    public static void main(String[] args)throws IOException {
+        BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+        // t : 테스트 케이스 개수
+        int t = Integer.parseInt(br.readLine());
+
+        // arr : 파도반 수열 P(N)값을 가지는 배열
+        long[] arr = new long[100];
+
+        // P(1)부터 P(3)의 값은 1
+        for(int i = 0;i<3;i++){
+            arr[i] = 1;
+        }
+
+        // N>=4일 때는 P(i) = P(i-3) + P(i-2)
+        for(int i = 3;i<100;i++){
+            arr[i] = arr[i-3] + arr[i-2];
+        }
+
+        // t만큼 n을 입력받아 P(n) 출력
+        for(int i = 0;i<t;i++){
+            int n = Integer.parseInt(br.readLine());
+            System.out.println(arr[n-1]);
+        }
+    }
+}
 ```  
--->
