--- a/_posts/2022-06-18-Solved.acCLASS뿌시기(0).md
+++ b/_posts/2022-06-18-Solved.acCLASS뿌시기(0).md
@@ -23,7 +23,7 @@ tags:
 
 
 ## Solved.ac CLASS 뿌시기를 하는 이유
-이번 학기동안 여러 인턴십 모집에 지원했었는데 코딩테스트에서 계속 떨어졌다.... 알고리즘 수업을 통해 이론적으로는 알고있지만 직접 구현하고 문제를 푼 경험이 적어 알고리즘 실력이 부족하다는 것은 알고있었다. 그런데 이렇게 코딩테스트에서 여러 번 떨어져보니 이제는 알고리즘 공부를 꼭 해야할 때라는 것을 느꼈다.
+이번 학기동안 여러 인턴십 모집에 지원했었는데 코딩테스트에서 계속 떨어졌다.. 알고리즘 수업을 통해 이론적으로는 알고있지만 직접 구현하고 문제를 푼 경험이 적어 알고리즘 실력이 부족하다는 것은 알고있었다. 그런데 이렇게 코딩테스트에서 여러 번 떨어져보니 이제는 알고리즘 공부를 꼭 해야할 때라는 것을 느꼈다.
 
 백준 온라인 저지 사이트에서는 정말 많은 문제들이 있기 때문에 어떤 문제를 풀지 고르기 쉽지 않다. Solved.ac의 CLASS는 단계별로 중요한 문제들을 잘 정리해놨고, 또 한 단계씩 문제 리스트를 다 풀어나갈 때마다 성취감도 느끼기 좋을 것 같아 이번 방학동안 Solved.ac CLASS 뿌시기를 하기로 했다.
 
