--- a/_posts/2021-10-21-블로그-시작.md
+++ b/_posts/2021-10-21-블로그-시작.md
@@ -22,17 +22,17 @@ tags:
 
 ## 기술 블로그
 코딩을 하다가 막히는 부분이 생길 때마다 구글링을 하면서 많은 기술 블로그들의 도움을 받았다.
-누군지는 모르지만 IT기술 블로거들은 나보다 먼저 이 에러 메시지를 접하고 해결한 후, 나를 에러로부터 벗어나게 해주는 영웅같은 존재였다...ㅋㅋ
+누군지는 모르지만 IT기술 블로거들은 나보다 먼저 이 에러 메시지를 접하고 해결한 후, 나를 에러로부터 벗어나게 해주는 영웅같은 존재였다\...ㅋㅋ
 기술 블로그들의 도움을 받으며 나의 경험도 쌓여갈수록 나도 내가 했던 경험을 바탕으로 나와 똑같은 실수를 하고 있을 누군가에게 도움을 주고싶다는 생각이 든 것 같다.
 그래서 내가 해온 것들을 정리할 겸 나의 경험들을 공유하기 위해 기술 블로그를 만들기로 했다.
 
 ## 앞으로의 기록
 우선 당장은 지금까지 내가 공부한 내용들과 진행한 프로젝트들에 대해서 정리할 예정이지만 앞서 말했다시피 나는 아직 부족한 개발자이다.
-(계속 발전하는 IT기술 때문에 공부할게 너무 많아서도 그렇지만...ㅠㅠ)
+(계속 발전하는 IT기술 때문에 공부할게 너무 많아서도 그렇지만\...ㅠㅠ)
 그래서 정리가 끝나면 또 새로운 공부와 프로젝트들을 시작하고, 그것들을 계속 이 블로그에 기록으로 남기고자 한다.
   
 ## 마무리
 블로그 시작을 알리는 이 글을 작성하는 것부터 많은 시간이 걸려서 '내가 이 블로그를 꾸준히 잘 관리할 수 있을까?'라는 걱정이 들지만 차근차근 꾸준히 포스팅을 해보도록 하겠다.
-포스팅을 하면서 내 글 솜씨도 늘어나길...
+포스팅을 하면서 내 글 솜씨도 늘어나길\...
 그리고 블로그의 이름과 같이 이 블로그를 보는 모든 사람들과 함께 공부하며 성장하는 내가 되고 싶다.
 우리 함께 공부합시다! __Study With Yenny!__
