--- a/_posts/2022-06-21-Solved.acCLASS뿌시기(4).md
+++ b/_posts/2022-06-21-Solved.acCLASS뿌시기(4).md
@@ -1,7 +1,7 @@
 ---
 layout: single
 title: "[솔크뿌] Solved.ac CLASS 뿌시기(4)"
-excerpt: "CLASS 3 : p1992, p11403, p1074"
+excerpt: "CLASS 3 : p1992, p11403, p1074, p1780"
 date: 2022-06-21
 last_modified_at: 2022-06-21
 toc: true
@@ -153,6 +153,66 @@ public class p1074 {
         c = Integer.parseInt(st.nextToken());
         size = (int)Math.pow(2,n);
         z(0,0,size);
+    }
+}
+```
+
+## 1780번 - 종이의 개수
+문제 링크 : [https://www.acmicpc.net/problem/1780](https://www.acmicpc.net/problem/1780)
+
+![image](https://user-images.githubusercontent.com/60471550/174880052-eb66692f-5d3f-48c2-a9e9-e8d2fb79f2c3.png)
+
+```java
+import java.util.*;
+import java.io.*;
+
+public class p1780 {
+    public static int[][] graph;
+    public static int[] cnt = {0,0,0};
+
+    public static void divide(int y, int x, int size){
+        if(size == 1){
+            int item = graph[y][x];
+            cnt[item+1]++;
+        }else{
+            int item = graph[y][x];
+            boolean isSame = true;
+            check : for(int i = 0;i<size;i++){
+                for(int j = 0;j<size;j++){
+                    if(graph[y+i][x+j]!=item){
+                        isSame = false;
+                        break check;
+                    }
+                }
+            }
+            if(isSame){
+                cnt[item+1]++;
+            }else{
+                size = size / 3;
+                for(int i = 0;i<3;i++){
+                    for(int j = 0;j<3;j++){
+                        divide(y+size*i, x+size*j,size);
+                    }
+                }
+            }
+        }
+    }
+
+    public static void main(String[] args)throws IOException {
+        BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+        int n = Integer.parseInt(br.readLine());
+        StringTokenizer st;
+        graph = new int[n][n];
+        for(int i = 0;i<n;i++){
+            st = new StringTokenizer(br.readLine());
+            for(int j = 0;j<n;j++){
+                graph[i][j] = Integer.parseInt(st.nextToken());
+            }
+        }
+        divide(0,0,n);
+        for(int i = 0;i<3;i++){
+            System.out.println(cnt[i]);
+        }
     }
 }
 ```
