--- a/_posts/2022-06-21-Solved.acCLASS뿌시기(4).md
+++ b/_posts/2022-06-21-Solved.acCLASS뿌시기(4).md
@@ -1,7 +1,7 @@
 ---
 layout: single
 title: "[솔크뿌] Solved.ac CLASS 뿌시기(4)"
-excerpt: "CLASS 3 : p1992, p11403, p1074, p1780"
+excerpt: "CLASS 3 : p1992, p11403, p1074, p1780, p11723"
 date: 2022-06-21
 last_modified_at: 2022-06-21
 toc: true
@@ -213,6 +213,50 @@ public class p1780 {
         for(int i = 0;i<3;i++){
             System.out.println(cnt[i]);
         }
+    }
+}
+```
+
+## 11723번 - 집합
+문제 링크 : [https://www.acmicpc.net/problem/11723](https://www.acmicpc.net/problem/11723)
+
+![image](https://user-images.githubusercontent.com/60471550/174893119-6819e5f1-b987-49f7-b722-d18d962e0587.png)
+
+```java
+import java.util.*;
+import java.io.*;
+
+public class p11723 {
+    public static void main(String[] args)throws IOException {
+        BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+        int m = Integer.parseInt(br.readLine());
+        Set<Integer> set = new HashSet<>();
+        Set<Integer> all = new HashSet<>();
+        for(int i = 1;i<=20;i++){
+            all.add(i);
+        }
+        StringBuilder sb = new StringBuilder();
+        for(int i = 0;i<m;i++){
+            String[] input = br.readLine().split(" ");
+            String cmd = input[0];
+            int x = 0;
+            if(input.length == 2) x = Integer.parseInt(input[1]);
+            switch (cmd){
+                case "add": set.add(x); break;
+                case "remove": set.remove(x); break;
+                case "check":
+                    if(set.contains(x)) sb.append(1 + "\n");
+                    else sb.append(0 + "\n");
+                    break;
+                case "toggle":
+                    if(set.contains(x)) set.remove(x);
+                    else set.add(x);
+                    break;
+                case "all": set = all; break;
+                case "empty": set = new HashSet<>(); break;
+            }
+        }
+        System.out.println(sb);
     }
 }
 ```
