--- a/_posts/2022-07-06-스프링-입문-프로젝트-환경설정.md
+++ b/_posts/2022-07-06-스프링-입문-프로젝트-환경설정.md
@@ -38,15 +38,18 @@ tags:
 ## 2. 프로젝트 실행하기
 ### 프로젝트 열기
 ![image](https://user-images.githubusercontent.com/60471550/177395600-32dd15b3-f5e3-4a26-8281-984d62418bcb.png)
-모든 설정은 완료했다면 Generate 버튼을 눌러 프로젝트를 다운 받고, IntelliJ에서 다운 받은 프로젝트를 Open 해주면 된다. Open 할 때는 프로젝트 위치에서 build.gradle을 선택한 후 OK를 눌러주면 된다. 여러 라이브러리들을 다운받아야 하므로 시간이 조금 걸릴 수 있다.
+
+모든 설정을 완료했다면 Generate 버튼을 눌러 프로젝트를 다운 받고, IntelliJ에서 다운 받은 프로젝트를 Open 해주면 된다. Open 할 때는 프로젝트 위치에서 build.gradle을 선택한 후 OK를 눌러주면 된다. 여러 라이브러리들을 다운받아야 하므로 시간이 조금 걸릴 수 있다.
 
 ### build.gradle
 ![image](https://user-images.githubusercontent.com/60471550/177397107-7ee35dc4-ca71-4070-af8d-633b54b6c88c.png)
+
 프로젝트를 실행하기 전 build.gradle을 확인해보면 앞서 프로젝트 생성 시 설정했던 내용들이 있는 것을 볼 수 있다. repositories에서 mavenCentral()은 라이브러리를 mavenCentral이라는 사이트에서 다운받아오도록 설정하는 것이라고 한다. dependencies에는 프로젝트 생성할 때 넣어주었던 라이브러리들이 들어가 있으며, test 라이브러리로 junit 5버전이 기본으로 들어간다고 한다. spring-boot-devtools는 따로 넣어준 것인데 이 라이브러리를 넣어주면 서버의 재시작 없이 html 파일만 재컴파일하여 view를 변경할 수 있도록 해준다고 한다. 
 
 ### 설정 수정
 File - Setting - Build, Execution, Deplyment - Build Tools - Gradle 에서 다음과 같이 설정을 바꿔주었다.
 ![image](https://user-images.githubusercontent.com/60471550/177399786-0c855974-afb4-46e0-aa3c-de16a7fc5883.png)
+
 Build and run 부분은 원래 Gradle이 기본으로 설정되어 있는데, Gradle을 통해서 실행하면 실행 속도가 느리기 때문에 IntelliJ IDEA로 바꿔주면 자바로 바로 실행하여 실행 속도가 빨라진다고 한다.
 Gradle JVM은 자바 실행이 잘 안되서 내가 설치한 JAVA 11로 설정해주었다.
 
