--- a/_posts/2022-07-13-친절한SQL튜닝-SQL-처리-과정.md
+++ b/_posts/2022-07-13-친절한SQL튜닝-SQL-처리-과정.md
@@ -32,7 +32,8 @@ tags:
   - ASCII 텍스트에 대한 숫자값을 계산하고, 해싱 알고리즘을 사용해 매칭되는 SQL 커서를 찾음
 
 ### Optimization
-**SQL Optimizer**는 다음과 같이 3가지 엔진으로 나뉜다.<br>
+**SQL Optimizer**는 다음과 같이 3가지 엔진으로 나뉜다.
+
 |엔진|설명|||
 |---|---|---|---|
 |Query Transformer|사용자가 작성한 SQL을 최적화하기 쉬운 형태로 변환 |||
@@ -47,9 +48,10 @@ tags:
 
 **라이브러리 캐시**는 최적화 과정을 거친 SQL과 실행계획을 캐싱해두는 메모리 공간이다. System Global Area (SGA)는 서버 프로세스와 백그라운드 프로세스가 공통으로 액세스하는 데이터와 제어 구조를 캐싱하는 메모리 공간인데, 라이브러리 캐시는 SGA의 구성요소 중 하나이다.
 
+## Soft Parsing vs. Hard Parsing
 ![image](https://user-images.githubusercontent.com/60471550/178547157-c378f064-3051-4e0a-9bab-41405768b9af.png)
 
 사용자가 SQL문을 전달하면 DBMS는 SQL Parsing을 진행한 후 라이브러리 캐시에 해당 SQL과 실행계획이 있는지 확인한다. 해당 SQL과 실행계획이 캐시에 있다면 최적화 과정을 생략하고 바로 실행단계로 넘어가는데, 이것을 **Soft Parsing**이라고 한다. 라이브러리 캐시에서 해당 SQL을 찾을 수 없다면 최적화 과정을 통해 실행계획을 생성한 다음 실행하게 되는데, 이것을 **Hard Parsing**이라고 한다.
 
-### SQL 최적화 과정이 무거운 이유
+## SQL 최적화 과정이 무거운 이유
 조인 순서, 조인 방식, 액세스 방식, 인덱스 스캔 방식 등에 따라 하나의 쿼리를 수행하는데 매우 다양한 액세스 경로가 존재한다. 또 수많은 딕셔너리와 통계정보를 읽어 모든 실행 경로의 비용을 계산해야 한다. 따라서 최적화 과정을 거치는 Hard Parsing은 매우 무거운 작업이며, CPU를 많이 소비한다.
