--- a/_posts/2022-07-13-친절한SQL튜닝-SQL-처리-과정.md
+++ b/_posts/2022-07-13-친절한SQL튜닝-SQL-처리-과정.md
@@ -36,9 +36,9 @@ tags:
 
 |엔진|설명|||
 |---|---|---|---|
-|Query Transformer|사용자가 작성한 SQL을 최적화하기 쉬운 형태로 변환 |||
-|Plan Generator|하나의 쿼리를 수행하는 데 후보군이 될만한 다양한 실행계획 생성|||
-|Estimator| - 각 수행 단계의 선택도, 카디널리티, 비용 계산 $\Rightarrow$ 총 비용 계산<br> - 오브젝트 통계 활용 : 레코드 개수, 블록 수, 평균행 길이, 인덱스 깊이, 컬럼 분포, 클러스터링 팩터<br> - 시스템 통계 활용 : CPU 속도, Single Block Read Time, Multiblock Read Time 등<br> - 예상치|
+|**Query Transformer**|사용자가 작성한 SQL을 최적화하기 쉬운 형태로 변환 |||
+|**Plan Generator**|하나의 쿼리를 수행하는 데 후보군이 될만한 다양한 실행계획 생성|||
+|**Estimator**| - 각 수행 단계의 선택도, 카디널리티, 비용 계산 $\Rightarrow$ 총 비용 계산<br> - 오브젝트 통계 활용 : 레코드 개수, 블록 수, 평균행 길이, 인덱스 깊이, 컬럼 분포, 클러스터링 팩터<br> - 시스템 통계 활용 : CPU 속도, Single Block Read Time, Multiblock Read Time 등<br> - 예상치|
 
 ### Row Source Generation
 **SQL 실행계획**은 개념 수준이기 때문에 실제 실행 가능한 형태가 아니다. 따라서 실행 엔진이 실행할 수 있는 코드 또는 프로시저 형태의 **Row Source**로 만들어준다. Row Source는 레코드 집합을 순차적으로 처리하면서 사용자가 요구한 최종 결과 집합을 생성하는 제어 구조이다.
