--- a/_posts/2022-07-14-친절한SQL튜닝-라이브러리-캐시-구조-및-커서-공유.md
+++ b/_posts/2022-07-14-친절한SQL튜닝-라이브러리-캐시-구조-및-커서-공유.md
@@ -19,7 +19,7 @@ tags:
 ## 커서(Cursor)
 ![image](https://user-images.githubusercontent.com/60471550/178670778-26cf0a52-6057-4aea-a0f2-e618be0f90fb.png)
 
-커서에는 공유 커서, 세션 커서, 애플리케이셔 커서가 있다. 먼저 **공유 커서**는 라이브러리 캐시의 공유되어 있는 Shared SQL Area이다. [이전 게시물](https://dpdms529.github.io/db/%EC%B9%9C%EC%A0%88%ED%95%9CSQL%ED%8A%9C%EB%8B%9D-SQL-%EC%B2%98%EB%A6%AC-%EA%B3%BC%EC%A0%95/#%EB%9D%BC%EC%9D%B4%EB%B8%8C%EB%9F%AC%EB%A6%AC-%EC%BA%90%EC%8B%9Clibrary-cache)에서 말했다시피 SQL을 수행하면 해당 SQL이 라이브러리 캐시에 공유되어 있는지 확인하여 없다면 최적화 과정을 거쳐 실행 계획을 만들고 라이브러리 캐시에 공유하는데 이것이 공유 커서이다.<br>
+커서에는 공유 커서, 세션 커서, 애플리케이셔 커서가 있다. 먼저 **공유 커서**는 라이브러리 캐시의 공유되어 있는 Shared SQL Area이다. [이전 게시물](https://dpdms529.github.io/db/%EC%B9%9C%EC%A0%88%ED%95%9CSQL%ED%8A%9C%EB%8B%9D-SQL-%EC%B2%98%EB%A6%AC-%EA%B3%BC%EC%A0%95/#%EB%9D%BC%EC%9D%B4%EB%B8%8C%EB%9F%AC%EB%A6%AC-%EC%BA%90%EC%8B%9Clibrary-cache)에서 말했다시피 SQL을 수행하면 해당 SQL이 라이브러리 캐시에 공유되어 있는지 확인하여 없다면 최적화 과정을 거쳐 실행 계획을 만들고 라이브러리 캐시에 공유하는데 그 공유된 공간이 공유 커서이다.<br>
 다음으로 **세션 커서**는 Program Global Area(PGA)에 할당된 Private SQL Area로, 공유 커서에 대한 인스턴스이다. 공유 커서는 객체지향프로그래밍에서의 클래스와 같이 SQL을 수행하는데 필요한 루틴을 정의한 것이다. JAVA에서 `new`를 사용하여 객체를 할당하는 것처럼 오라클에서도 커서를 오픈하면 공유 커서를 인스턴스화하여 PGA에 커서를 위한 메모리 공간을 할당하고 실제 데이터 추출을 할 수 있도록 준비작업을 한다.<br>
 마지막으로 **애플리케이션 커서**는 클라이언트 환경에서 세션 커서를 가리키는 핸들이다.
 
