--- a/_posts/2022-07-14-친절한SQL튜닝-라이브러리-캐시-구조-및-커서-공유.md
+++ b/_posts/2022-07-14-친절한SQL튜닝-라이브러리-캐시-구조-및-커서-공유.md
@@ -24,7 +24,7 @@ tags:
 마지막으로 **애플리케이션 커서**는 클라이언트 환경에서 세션 커서를 가리키는 핸들이다.
 
 ## 커서 공유
-커서 공유에서 말하는 커서는 공유 커서를 뜻한다. 라이브러리 캐시에 실행하고자 하는 SQL이  사용함으로써 최적화 과정을 거치지 않고 쿼리를 반복하여 재사용할 수 있다.
+커서 공유에서 말하는 커서는 공유 커서를 뜻한다. 라이브러리 캐시에 캐싱된 SQL을 사용함으로써 최적화 과정을 거치지 않고 쿼리를 반복하여 재사용할 수 있다.
 
 ## 이름 없는 SQL 문제
 사용자 정의 함수/프로시저, 트리거, 패키지 등은 생성할 때 이름을 부여하며 컴파일해서 딕셔너리에 저장되어 있다. 이는 사용자가 명시적으로 Drop하기 전까지는 영구 보관하기 때문에 계속해서 공유하고 재사용할 수 있다.<br>
