--- a/_posts/2022-07-14-친절한SQL튜닝-라이브러리-캐시-구조-및-커서-공유.md
+++ b/_posts/2022-07-14-친절한SQL튜닝-라이브러리-캐시-구조-및-커서-공유.md
@@ -30,20 +30,12 @@ tags:
 사용자 정의 함수/프로시저, 트리거, 패키지 등은 생성할 때 이름을 부여하며 컴파일해서 딕셔너리에 저장되어 있다. 이는 사용자가 명시적으로 Drop하기 전까지는 영구 보관하기 때문에 계속해서 공유하고 재사용할 수 있다.<br>
 이와 다르게 SQL은 전체 SQL 텍스트 자체가 이름이다. 때문에 텍스트 중 하나라도 수정하는 순간 다른 객체가 생긴다. SQL은 개발 중 수시로 변경이 일어나며 일회성 SQL도 존재하기 때문에 이를 모두 저장하려면 많은 저장 공간이 필요할 것이다. 따라서 SQL은 딕셔너리에 저장하지 않고 처음 실행할 때 최적화 과정을 거쳐 동적으로 생성한 내부 프로시저를 라이브러리 캐시에 적재함으로써 공유 & 재사용할 수 있다. 캐시에 공간이 부족해지면 버려지고 다시 실행할 때 최적화 과정을 통해 다시 캐싱된다.
 
-## 공유 불가능한 SQL
-```sql
-SELECT * FROM EMP WHERE EMPNO = 8000;
-select * from emp where empno = 8000;
-select /* comment */ * from emp where empno = 8000;
-```
-위의 SQL들은 모두 같은 SQL이다. 하지만 텍스트가 다르기 때문에 공유되지 못하고 각각 최적화 과정을 거쳐 라이브러리 캐시에 캐싱된다.
-
-## 공유 가능한 SQL
+## 바인드 변수
 ```sql
 SELECT * FROM USER WHERE ID = 'dpdms529';
 SELECT * FROM USER WHERE ID = 'twokst';
 ```
-위의 두 SQL은 같은 역할을 수행하지만 찾으려는 아이디가 다르기 때문에 각각 최적화 과정을 거쳐야 한다. 하지만 **바인드 변수**를 사용하여 아래와 같이 SQL을 작성하면 SQL을 공유하여 재사용할 수 있다.
+위의 두 SQL은 같은 역할을 수행하지만 찾으려는 아이디가 다르기 때문에 각각 최적화 과정을 거쳐야 한다. 하지만 **바인드 변수**를 사용하여 아래와 같이 SQL을 작성하면 하나의 SQL을 공유하여 재사용할 수 있다.
 ```sql
 SELECT * FORM USER WHERE ID = :ID;
 ```
