--- a/_posts/2022-07-14-친절한SQL튜닝-라이브러리-캐시-구조-및-커서-공유.md
+++ b/_posts/2022-07-14-친절한SQL튜닝-라이브러리-캐시-구조-및-커서-공유.md
@@ -28,7 +28,7 @@ tags:
 
 ## 이름 없는 SQL 문제
 사용자 정의 함수/프로시저, 트리거, 패키지 등은 생성할 때 이름을 부여하며 컴파일해서 딕셔너리에 저장되어 있다. 이는 사용자가 명시적으로 Drop하기 전까지는 영구 보관하기 때문에 계속해서 공유하고 재사용할 수 있다.<br>
-이와 다르게 SQL은 전체 SQL 텍스트 자체가 이름이다. 때문에 텍스트 중 하나라도 수정하는 순간 다른 객체가 생긴다. SQL은 개발 중 수시로 변경이 일어나며 일회성 SQL도 존재하기 때문에 이를 모두 저장하려면 많은 저장 공간이 필요할 것이다. 따라서 SQL은 딕셔너리에 저장하지 않고 처음 실행할 때 최적화 과정을 거쳐 동적으로 생성한 내부 프로시저를 라이브러리 캐시에 적재함으로써 공유 & 재사용할 수 있다. 캐시에 공간이 부족해지면 버려지고 다시 실행할 때 최적화 과정을 통해 다시 캐싱된다.
+이와 다르게 SQL은 전체 SQL 텍스트 자체가 이름이다. 때문에 텍스트 중 하나라도 수정하는 순간 다른 객체가 생긴다. SQL은 개발 중 수시로 변경이 일어나며 일회성 SQL도 존재하기 때문에 이를 모두 저장하려면 많은 저장 공간이 필요할 것이다. 따라서 SQL은 딕셔너리에 저장하지 않고 처음 실행할 때 최적화 과정을 거쳐 동적으로 생성한 내부 프로시저를 라이브러리 캐시에 적재함으로써 공유하고 재사용할 수 있다. 캐시에 공간이 부족해지면 버려지고 다시 실행할 때 최적화 과정을 통해 다시 캐싱된다.
 
 ## 바인드 변수
 ```sql
@@ -46,7 +46,7 @@ SELECT * FORM USER WHERE ID = :ID;
 
 이러한 경우 데이터 분포나 조회 범위에 따라 실행계획을 분리하면 문제를 해결할 수 있다. 아파트 매물이 많은 서울과 경기도에서 검색하는 쿼리와 그 외의 지역에서 검색하는 쿼리를 따로 작성하여 `UNION ALL`로 합쳐주는 것이다.
 ```sql
-SELECT /*+FULL(A)*/ *
+SELECT /*+ FULL(A) */ *
 FROM 아파트매물 A
 WHERE :CITY IN ('서울시','경기도')
 AND 도시 = :CITY
@@ -56,7 +56,8 @@ FROM 아파트매물 A
 WHERE :CITY NOT IN ('서울시','경기도')
 AND 도시 = :CITY;
 ```
-또는 라이브러리 캐시 부하 가능성이 낮은 경우 바인드 변수 대신 Literal 상수 값을 사용하는 것이 오히려 더 나은 실행계획을 수립하는데 도움이 될 수 있다. Literal 상수값을 쓰는 것이 더 나은 경우는 다음과 같다. 
+
+라이브러리 캐시 부하 가능성이 낮은 경우에는 바인드 변수 대신 Literal 상수 값을 사용하는 것이 오히려 더 나은 실행계획을 수립하는데 도움이 될 수 있다. Literal 상수값을 쓰는 것이 더 나은 경우는 다음과 같다. 
 - 조건절 컬럼의 값 종류가 소수인 경우
 - Batch 프로그램이나 DW, OLAP 등 정보계 시스템에서 사용되는 Long Running 쿼리
 - OLTP성이더라도 사용빈도가 아주 낮은 쿼리
