--- a/_posts/2022-07-15-Solved.acCLASS뿌시기(9).md
+++ b/_posts/2022-07-15-Solved.acCLASS뿌시기(9).md
@@ -5,6 +5,7 @@ excerpt: "CLASS 4 : p9663, p14502, p2407, p11725"
 date: 2022-07-15T20:14:00+09:00
 toc: true
 toc_sticky: true
+use_math: true
 categories:
   - Algorithm
 tags:
@@ -13,7 +14,7 @@ tags:
   - 솔크뿌
 ---
 ## 9663번 - N-Queen
-문제 링크 : [https://www.acmicpc.net/problem/9663](https://www.acmicpc.net/problem/9663)
+문제 링크 : <https://www.acmicpc.net/problem/9663>
 
 ![image](https://user-images.githubusercontent.com/60471550/178932469-e7d204f4-2cde-43ea-9945-1e508124eba9.png)
 
@@ -64,7 +65,7 @@ public class p9663 {
 ```
 
 ## 14502번 - 연구소
-문제 링크 : [https://www.acmicpc.net/problem/14502](https://www.acmicpc.net/problem/14502)
+문제 링크 : <https://www.acmicpc.net/problem/14502>
 
 ![image](https://user-images.githubusercontent.com/60471550/178933210-e59198e5-5707-4e64-ade7-0a04c82d9faf.png)
 ![image](https://user-images.githubusercontent.com/60471550/178933295-3de35d07-84f3-40a4-8f84-feb8ee30761d.png)
@@ -73,7 +74,7 @@ public class p9663 {
 - 그래프의 초기 상태를 따로 저장해둔다.
 - 빈 공간과 바이러스가 존재하는 위치를 리스트(empty, virus)에 각각 저장해놓는다.
 - 삼중 for문을 돌면서 빈 공간 3군데에 벽을 세워 얻을 수 있는 안전 영역의 최대 개수를 구한다.
-  - empty 리스트에서 선택한 3곳의 위치의 값을 1(벽)로 변경
+  - empty 리스트에서 선택한 3곳의 위치의 값을 1(벽)로 변경한다.
   - 바이러스가 존재하는 위치를 모두 큐에 넣은 후 bfs를 사용하여 바이러스가 퍼졌을 때를 구한다.
   - 그래프를 돌면서 빈 공간(0)인 경우 카운트를 센다.
   - 빈 공간을 카운트 한 값이 max 값보다 큰 경우 max 값을 카운트 값으로 변경해준다.
@@ -163,7 +164,7 @@ public class p14502 {
 ```
 
 ## 2407번 - 조합
-문제 링크 : [https://www.acmicpc.net/problem/2407](https://www.acmicpc.net/problem/2407)
+문제 링크 : <https://www.acmicpc.net/problem/2407>
 
 ![image](https://user-images.githubusercontent.com/60471550/178933890-359ae9a1-de6d-4019-b94b-d6278fd24232.png)
 
@@ -200,7 +201,7 @@ public class p2407 {
 ```
 
 ## 11725번 - 트리의 부모 찾기
-문제 링크 : [https://www.acmicpc.net/problem/11725](https://www.acmicpc.net/problem/11725)
+문제 링크 : <https://www.acmicpc.net/problem/11725>
 
 ![image](https://user-images.githubusercontent.com/60471550/178934137-2ec87b4d-4d72-4269-9323-846a5045468b.png)
 
