--- a/_pages/categories/솔크뿌.md
+++ b/_pages/categories/솔크뿌.md
@@ -1,7 +1,7 @@
 ---
 title: "솔크뿌"
-layout: tag
-permalink: /tags/솔크뿌/
+layout: category
+permalink: /algorithm/솔크뿌/
 author_profile: true
 sidebar_main: true
 taxonomy: 솔크뿌
