--- a/_pages/categories/스프링입문.md
+++ b/_pages/categories/스프링입문.md
@@ -1,7 +1,7 @@
 ---
 title: "스프링 입문"
-layout: tag
-permalink: /tags/스프링입문/
+layout: category
+permalink: /spring/스프링입문/
 author_profile: true
 sidebar_main: true
 taxonomy: 스프링 입문
