--- a/_posts/2021-10-21-블로그-시작.md
+++ b/_posts/2021-10-21-블로그-시작.md
@@ -6,9 +6,11 @@ date: 2021-10-21T18:20:00+09:00
 toc: true
 toc_sticky: true
 categories:
-  - Notice
+  - ETC
+  - Blog
 tags:
-  - Notice
+  - ETC
+  - Blog
 ---
 # Study With Yenny
 ## 취업준비
