--- a/_posts/2022-07-07-CLASS3-뿌시기-완료.md
+++ b/_posts/2022-07-07-CLASS3-뿌시기-완료.md
@@ -6,9 +6,11 @@ date: 2022-07-07T02:11:00+09:00
 toc: true
 toc_sticky: true
 categories:
-  - Notice
+  - ETC
+  - 후기 & 회고
 tags:
-  - Notice
+  - ETC
+  - 후기 & 회고
   - 솔크뿌
 ---
 
