--- a/_posts/2022-06-18-Solved.acCLASS뿌시기시작.md
+++ b/_posts/2022-06-18-Solved.acCLASS뿌시기시작.md
@@ -1,17 +1,19 @@
 ---
 layout: single
-title: "[솔크뿌] Solved.ac CLASS 뿌시기(0)"
-excerpt: "Solved.ac CLASS 뿌시기"
+title: "[솔크뿌] Solved.ac CLASS 뿌시기 시작"
+excerpt: "Solved.ac CLASS 뿌시기 시작"
 date: 2022-06-18T21:50:00+09:00
 toc: true
 toc_sticky: true
 categories:
-  - Notice
+  - ETC
+  - Blog
 tags:
   - Algorithm
   - JAVA
   - 솔크뿌
-  - Notice
+  - ETC
+  - Blog
 ---
 
 ## Solved.ac - CLASS
