--- a/_pages/categories/후기&회고.md
+++ b/_pages/categories/후기&회고.md
@@ -1,7 +1,7 @@
 ---
 title: "후기 & 회고"
 layout: category
-permalink: /etc/후기&회고
+permalink: /etc/후기&회고/
 author_profile: true
 sidebar_main: true
 taxonomy: 후기 & 회고
