--- a/_posts/2022-07-07-친절한SQL튜닝-1장-SQL-처리-과정과-IO.md
+++ b/_posts/2022-07-07-친절한SQL튜닝-1장-SQL-처리-과정과-IO.md
@@ -23,6 +23,7 @@ tags:
 - SQL 최적화 : DBMS 내부에서 프로시저를 작성하고 컴파일해서 실행 가능한 상태로 만드는 전 과정
 
 ### SQL 최적화 과정
+![image](https://user-images.githubusercontent.com/60471550/178516427-21674d3f-5ec9-4c66-b5f9-166c4eab1788.png)
 
 1. SQL 파싱
     - 파싱 트리 생성
