--- a/_posts/2022-07-13-친절한SQL튜닝-2장-인덱스-기본.md
+++ b/_posts/2022-07-13-친절한SQL튜닝-2장-인덱스-기본.md
@@ -120,7 +120,7 @@ tags:
 
 - ORDER BY 절에서 컬럼을 가공하면 가공한 값 기준으로 정렬을 해야하므로 인덱스를 사용할 수 없음 → 정렬 연산 생략 불가능
 
-### SELECT-LIST에서 컬럼 가공*
+### SELECT-LIST에서 컬럼 가공
 
 - MIN/MAX 함수를 사용하면 인덱스 리프 블록의 왼쪽/오른쪽에서 레코드 하나만 읽고 멈출 수 있음 → 정렬 연산 생략 가능
 - MIN/MAX를 사용하기 전 컬럼을 가공하면 인덱스 사용 불가능하므로 정렬 연산 생략 불가능
@@ -131,7 +131,7 @@ tags:
 - 숫자형과 문자형이 만나면 문자형을 숫자형으로 변환
 - 날짜형과 문자형이 만나면 문자형을 날짜형으로 변환
 - 날짜 포맷을 정확히 지정해주는 것이 필요
-    - TO_DATE(’01-JAN-2018’, ‘DD-MON-YYYY’)
+    - `TO_DATE(’01-JAN-2018’, ‘DD-MON-YYYY’)`
 - LIKE 연산자를 사용하면 숫자형이 문자형으로 변환됨
 
 **자동 형변환 주의**
@@ -154,7 +154,7 @@ tags:
 
 - 수직적 탐색 없이 인덱스 리프 블록을 처음부터 끝까지 수평적으로 탐색하는 방식
 
-Index Full Scan의 효용성
+**Index Full Scan의 효용성**
 
 - Index Range Scan이 불가능하고 테이블의 아주 일부만 액세스하는 상황이면 Index Full Scan 사용
 
