데이터베이스 개론

--- a/_pages/categories/데이터베이스 개론.md
+++ b/_pages/categories/데이터베이스 개론.md
@@ -1,7 +1,7 @@
 ---
 title: "데이터베이스 개론"
 layout: category
-permalink: /db/데이터베이스 개론/
+permalink: /db/데이터베이스-개론/
 author_profile: true
 sidebar_main: true
 taxonomy: 데이터베이스 개론
