--- a/_pages/404.md
+++ b/_pages/404.md
@@ -1,8 +1,9 @@
 ---
 title: "Page Not Found"
 excerpt: "Page not found. Your pixels are in another canvas."
-sitemap: false
+layout: single
 permalink: /404.html
+author_profile: true
 ---
 
 요청하신 페이지를 찾을 수 없습니다.
