--- a/_pages/categories/중분류.md
+++ b/_pages/categories/중분류.md
@@ -1,8 +1,8 @@
 ---
-title: "중분류"
+title: "IT"
 layout: category
-permalink: /대분류/중분류/
+permalink: /대분류/it/
 author_profile: true
 sidebar_main: true
-taxonomy: 중분류
+taxonomy: IT
 ---
