--- a/_posts/2023-05-13-welcome.md
+++ b/_posts/2023-05-13-welcome.md
@@ -6,8 +6,8 @@ date: 2023-05-19 00:00:00
 toc: true
 toc_sticky: true
 use_math: true
-categories: [Experiences, GS 리테일 인턴]
-tags: [Welcome, Experiences, GS 리테일 인턴]
+categories: [Books, 모던 자바 인 액션]
+tags: [Welcome, Books, 모던 자바 인 액션]
 ---
 
 # Welcome
