--- a/_drafts/블로그-설정.md
+++ b/_drafts/블로그-설정.md
@@ -10,10 +10,10 @@ categories: [Experiences, Jekyll 블로그]
 tags: [Experiences, Jekyll 블로그]
 ---
 
-## Configuration
-[블로그 설정 공식 문서](https://mmistakes.github.io/minimal-mistakes/docs/configuration/)
+## _config.yml
+[설정 공식 문서](https://mmistakes.github.io/minimal-mistakes/docs/configuration/)
 
-Jekyll 블로그는 _config.yml 파일의 내용을 통해 블로그의 전반적인 설정을 할 수 있다.
+Jekyll 블로그는 _config.yml 파일의 내용을 통해 블로그 설정을 할 수 있다.
 
 ## Theme Setting
 ### theme
@@ -56,37 +56,37 @@ ex) "dpdms529/dpdms529.github.io"
 ### logo
 ![logo](https://github.com/dpdms529/dpdms529.github.io/assets/60471550/8dae64c7-c304-47cc-9ef3-cf13e2438f3e)
 
-빨간 박스로 표시한 부분을 설정해준다.
+로고를 설정해준다.
 
 ### masthead_title
 ![masthead_title](https://github.com/dpdms529/dpdms529.github.io/assets/60471550/d627a9a1-bb02-4689-8e0c-ba219d0bed65)
 
-빨간 박스로 표시한 부분을 설정해준다.
+제목을 설정해준다. 설정하지 않으면 기본으로 위에 설정한 사이트 제목이 들어간다.
 
 ## Site Author
+![author](https://github.com/dpdms529/dpdms529.github.io/assets/60471550/89b00003-85c1-4694-8c2b-e39cbae7c0bb)
+
 ### name
-블로그 주인 이름을 적으면 된다.
-
-![name](https://github.com/dpdms529/dpdms529.github.io/assets/60471550/4d3adb86-ae21-43be-a100-8882a8aa6530)
-
-빨간 박스로 표시한 부분을 설정해준다.
+이름을 적으면 된다.
 
 ### avatar
-블로그 주인을 나타내는 사진을 `/assets/images/`에 올린 후 그 사진의 경로를 적으면 된다.
+원하는 사진을 `/assets/images/`에 올린 후 그 사진의 경로를 적으면 된다.
 
 ### bio
-블로그 주인의 소개를 적으면 된다.
+자기소개를 적으면 된다.
 
 ### location
-블로그 주인의 위치(?)를 적으면 된다.
+사는 지역을 적으면 된다.
 
 ### email
-블로그 주인의 이메일 주소를 적으면 된다.
+본인 이메일 주소를 적으면 된다.
 
 ### links
 공개하고 싶은 링크의 url 주석을 풀어준 후 본인의 것을 적어주면 된다.
 
 ## Site Footer
+![footer](https://github.com/dpdms529/dpdms529.github.io/assets/60471550/d5540121-a21a-4817-82f1-f0b3f045117b)
+
 ### links
 공개하고 싶은 링크의 url 주석을 풀어준 후 본인의 것을 적어주면 된다.
 
