--- a/_posts/Experiences/Jekyll 블로그/2023-05-23-Jekyll-블로그-생성.md
+++ b/_posts/Experiences/Jekyll 블로그/2023-05-23-Jekyll-블로그-생성.md
@@ -14,7 +14,7 @@ tags: [Experiences, Jekyll 블로그]
 블로그를 한동안 방치했었는데 시간도 생겼고, 다시 잘 운영해보고 싶어서 싹 밀고 새로 만들었다. 한 번 했었으니깐 다시 만들면 금방 만들 줄 았았는데 생각보다 시간이 오래 걸렸다. 혹시 또 jekyll 블로그를 새로 만들고 싶어질지도 모르니깐 블로그 생성 과정을 정리해보려고 한다.
 
 ## 설치
-[Jekyll 윈도우 설치 방법](https://jekyllrb.com/docs/installation/windows/)
+{% linkpreview "https://jekyllrb.com/docs/installation/windows/" %}
 
 jekyll을 사용하기 위해서는 먼저 ruby를 설치해야 한다. 나는 Window를 쓰고 있기 때문에 [RubyInstaller](https://rubyinstaller.org/)를 통해 ruby를 설치해줬다.
 
@@ -27,7 +27,7 @@ jekyll을 사용하기 위해서는 먼저 ruby를 설치해야 한다. 나는 W
 ruby 설치가 모두 끝나면 cmd 창에서 `gem install jekyll bundler`을 통해 jekyll과 bundler를 설치해준다. 설치가 끝나면 `jekyll -v`을 통해 jekyll이 제대로 설치됐는지 확인해준다.
 
 ## Minimal Mistakes
-[Minimal Mistakes 가이드 문서](https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/)
+{% linkpreview "https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/" %}
 
 jekyll theme에는 여러가지가 있는데 나는 Minimal Mistakes를 골랐다. 원래도 이 테마를 썼었는데 가이드 문서가 잘 되어있고, 많은 사람들이 사용하다보니 참고할 글도 많아서 커스터마이징할 때 생기는 문제들을 해결할 때 도움이 많이 됐었어서 그대로 쓰기로 했다.
 
@@ -93,6 +93,8 @@ gem 'wdm', '~> 0.1.1', :install_if => Gem.win_platform?
 그래서 github-pages 대신 jekyll의 최신 버전을 사용하고, `Github Actions`를 사용하여 Github Pages에 블로그의 변경사항을 자동 배포하는 방법을 찾게되었다. 그 내용은 다음 포스팅에 쓰도록 하겠다.
 
 ## 로컬에서 실행하기
-터미널을 열어서 `bundle exec jekyll serve`를 실행시킨 후 [http://127.0.0.1:4000/](http://127.0.0.1:4000/)에 들어가보면 다음과 같이 minimal mistakes 테마가 적용된 jekyll 블로그가 만들어진 것을 볼 수 있다.
+터미널을 열어서 `bundle exec jekyll serve`를 실행시킨 후 <http://127.0.0.1:4000/>에 들어가보면 다음과 같이 minimal mistakes 테마가 적용된 jekyll 블로그가 만들어진 것을 볼 수 있다.
 
 ![jekyll 블로그](https://github.com/dpdms529/dpdms529.github.io/assets/60471550/237c1862-f882-4a67-a7a4-f6e3bb32f6b1)
+
+{% linkpreview "http://localhost:4000/experiences/jekyll-%EB%B8%94%EB%A1%9C%EA%B7%B8/Jekyll-%EB%B8%94%EB%A1%9C%EA%B7%B8-%EC%83%9D%EC%84%B1/" %}
