--- a/_posts/Experiences/Jekyll 블로그/2023-05-23-Jekyll-블로그-생성.md
+++ b/_posts/Experiences/Jekyll 블로그/2023-05-23-Jekyll-블로그-생성.md
@@ -97,4 +97,4 @@ gem 'wdm', '~> 0.1.1', :install_if => Gem.win_platform?
 
 ![jekyll 블로그](https://github.com/dpdms529/dpdms529.github.io/assets/60471550/237c1862-f882-4a67-a7a4-f6e3bb32f6b1)
 
-{% linkpreview "https://dpdms529.github.io/" %}
+{% linkpreview "https://dpdms529.github.io/experiences/jekyll-%EB%B8%94%EB%A1%9C%EA%B7%B8/Jekyll-%EB%B8%94%EB%A1%9C%EA%B7%B8-%EC%83%9D%EC%84%B1/" %}
