--- a/_posts/Lectures/스프링 핵심 원리 기본편/2023-05-24-1-객체-지향-설계와-스프링.md
+++ b/_posts/Lectures/스프링 핵심 원리 기본편/2023-05-24-1-객체-지향-설계와-스프링.md
@@ -11,157 +11,72 @@ tags: [Lectures, 스프링 핵심 원리 기본편]
 ---
 {% linkpreview "https://www.inflearn.com/course/%EC%8A%A4%ED%94%84%EB%A7%81-%ED%95%B5%EC%8B%AC-%EC%9B%90%EB%A6%AC-%EA%B8%B0%EB%B3%B8%ED%8E%B8" %}
 
-## 자바 진영의 추운 겨울과 스프링의 탄생
+## 스프링 탄생 배경
+![J2EE](https://github.com/dpdms529/dpdms529.github.io/assets/60471550/f9400d93-68b6-4849-bcd7-efa7de046959)
 
-### EJB(Enterprise Java Beans)
-- 2000년대 초반 자바 표준 기술
-- Entity Bean : ORM 기술
-- 이론이 좋고, 기능이 많았으나 어렵고, 느리고, 비쌈
-
-### POJO(Plain Old Java Object)
-- 순수한 자바로 돌아가자
-
-### 스프링
-- EJB 컨테이너 대체
-- 단순함의 승리
-- 현재 사실상 표준 기술
-
-### 하이버네이트
-- EJB 엔티티 빈 기술을 대체
-- JPA(Java Persistence API) 새로운 표준 정의
-
-## 스프링 역사
-- 2002년 로드 존슨 책 출간
-- EJB 문제점 지적
-- EJB 없이도 충분히 고품질의 확장 가능한 애플리케이션을 개발할 수 있음을 보여주고, 30000라인 이상의 기반 기술을 예제 코드로 선보임
-  - 스프링 핵심 개념과 기반 코드
-- BeanFactory, ApplicationContext, POJO, 제어의 역전, 의존 관계 주입
-
-### 릴리즈
-- 2003년 스프링 프레임워크 1.0 - XML
-- 2006년 스프링 프레임워크 2.0 - XML 편의 기능 지원
-- 2009년 스프링 프레임워크 3.0 - 자바 코드로 설정
-- 2013년 스프링 프레임워크 4.0 - 자바 8
-- 2014년 스프링 부트 1.0 출시
-- 2017년 스프링 프레임워크 5.0, 스프링부트 2.0 - 리액티브 프로그래밍 지원
-- 2020년 9월 스프링 프레임워크 5.2.x, 스프링부트 2.3.x
+2000년대 초반 자바의 표준 기술은 `EJB(Enterprise Java Beans)`였다. EJB는 이론이 좋고, 기능이 많았으나 어렵고, 느리고, 비싸다는 단점이 있었다. 그래서 EJB 컨테이너를 대체하는 기술로 `Spring`이 탄생하게 되었다. 2002년 로드 존슨은 EJB의 문제점을 지적한 책을 출간했는데, 그 책에서 EJB 없이 애플리케이션을 개발하는 예제 코드들을 선보였다. 그리고 그 코드들을 기반으로 `BeanFactory`, `ApplicationContext`, `POJO`, `제어의 역전`, `의존 관계 주입` 등 스프링의 핵심 개념과 기반 코드들이 만들어졌다.
 
 ## 스프링이란?
-
-### 스프링 생태계
-- 필수
-  - 스프링 프레임워크 : 스프링의 핵심
-  - 스프링 부트 : 여러 스프링 기술을 편리하게 사용할 수 있게 도와주는 기술
-- 선택
-  - 스프링 데이터 : CRUD를 편리하게 도와줌
-  - 스프링 세션 : 세션 기능을 편리하게 사용할 수 있도록 도와줌
-  - 스프링 시큐리티 : 보안
-  - 스프링 Rest Docs : API 문서
-  - 스프링 배치 : 배치 처리
-  - 스프링 클라우드 : 클라우드
-
-### 스프링 프레임워크
+`스프링`은 자바 언어 기반의 프레임워크로 애플리케이션 개발을 위한 여러 기술들을 제공한다.
 - 핵심 기술 : 스프링 DI 컨테이너, AOP, 이벤트, 기타
 - 웹 기술 : 스프링 MVC, 스프링 WebFlux
 - 데이터 접근 기술 : 트랜잭션, JDBC, ORM 지원, XML 지원
 - 기술 통합 : 캐시, 이메일, 원격접근, 스케쥴링
 - 테스트 : 스프링 기반 테스트 지원
 - 언어 : 코틀린, 그루비
-- 최근에는 스프링 부트를 통해서 스프링 프레임워크의 기술들을 편리하게 사용
 
-### 스프링 부트
-- 스프링을 편리하게 사용할 수 있도록 지원, 최근에는 기본으로 사용
-- 단독으로 실행할 수 있는 스프링 애플리케이션을 쉽게 생성
-- Tomcat 같은 웹 서버를 내장해서 별도의 웹 서버를 설치하지 않아도 됨
-- 손쉬운 빌드 구성을 위한 starter 종속성 제공
-- 스프링과 3rd party(외부) 라이브러리 자동 구성
-- 메트릭, 상태 확인, 외부 구성 같은 프로덕션 준비 기능 제공
-- 관례에 의한 간결한 설정
+최근에는 `스프링 부트`를 통해 스프링 프레임워크의 기술들을 편리하게 사용할 수 있다. 스프링 부트를 사용하면 단독으로 실행할 수 있는 스프링 애플리케이션을 쉽게 생성할 수 있으며 Tomcat과 같은 웹 서버를 내장하고 있기 때문에 별도의 웹 서버를 설치하지 않아도 된다. 또 손쉬운 빌드 구성을 위한 starter 종속성을 제공하고 스프링과 외부 라이브러리를 자동으로 구성해준다. 메트릭, 상태 확인, 외부 구성과 같은 프로덕션 준비 기능도 제공하며 관례에 의한 간결한 설정이 가능하다.
 
-### 스프링 단어?
-- 스프링 DI 컨테이너 기술
-- 스프링 프레임워크
-- 스프링 부트, 스프링 프레임워크 등을 모두 포함한 스프링 생태계
+### 스프링 생태계
+스프링은 스프링 생태계를 지칭하기도 하는데 스프링 생태계는 다음과 같다.
 
-## 스프링을 만든 이유?
+- 필수
+  - ![spring framework](https://github.com/dpdms529/dpdms529.github.io/assets/60471550/fb38a3af-43fa-4c31-82ec-07dfa4ba89fd){: width="30" height="30"} 스프링 프레임워크 : 스프링의 핵심
+  - ![spring boot](https://github.com/dpdms529/dpdms529.github.io/assets/60471550/0e1b9d01-251f-4e1b-971a-3f846e01a255){: width="30" height="30"} 스프링 부트 : 여러 스프링 기술을 편리하게 사용할 수 있게 도와주는 기술
+  
 
-### 스프링의 핵심 개념, 컨셉
-- 자바 언어 기반의 프레임워크
-- 자바 -> 객체 지향 언어
-- 스프링은 객체 지향 언어가 가진 강력한 특징을 살려내는 프레임워크
-- 스프링은 좋은 객체 지향 애플리케이션을 개발할 수 있게 도와주는 프레임워크
+- 선택
+  - ![spring data](https://github.com/dpdms529/dpdms529.github.io/assets/60471550/e9a92d5d-1b34-40b1-9ae9-bc2ec4e0f19b){: width="30" height="30"} 스프링 데이터 : CRUD를 편리하게 도와주는 기술
+  - ![spring session](https://github.com/dpdms529/dpdms529.github.io/assets/60471550/7aa13f2b-3a52-4c6a-ab7c-fc7b08e63672){: width="30" height="30"} 스프링 세션 : 세션 기능을 편리하게 도와주는 기술
+  - ![spring security](https://github.com/dpdms529/dpdms529.github.io/assets/60471550/fb7765ad-0bc2-4b8f-bd8a-45934ae96c02){: width="30" height="30"} 스프링 시큐리티 : 보안 기능을 편리하게 도와주는 기술
+  - ![spring rest docs](https://github.com/dpdms529/dpdms529.github.io/assets/60471550/c12f6507-67bf-4ff0-a6e7-49e59482e873){: width="30" height="30"} 스프링 Rest Docs : API 문서 관리를 편리하게 도와주는 기술
+  - ![spring batch](https://github.com/dpdms529/dpdms529.github.io/assets/60471550/90b84437-df81-42f8-af2e-27c097a709d1){: width="30" height="30"} 스프링 배치 : 배치 처리를 편리하게 도와주는 기술
+  - ![spring cloud](https://github.com/dpdms529/dpdms529.github.io/assets/60471550/08b73e5c-791a-4e61-94df-937528d41e85){: width="30" height="30"} 스프링 클라우드 : 클라우드 사용을 편리하게 도와주는 기술
 
 ## 좋은 객체 지향 프로그래밍
+`객체 지향 프로그래밍`이란 컴퓨터 프로그램을 명령어의 목록으로 보는 시각에서 벗어나 여러 개의 독립된 단위, 즉 `객체`들의 모임으로 파악하고자 하는 것이다. 각 객체는 메시지를 주고 받고, 데이터를 처리할 수 있다. 객체 지향 프로그래밍은 프로그램을 유연하고 변경이 용이하게 만들기 때문에 대규모 소프트웨어 개발에 많이 사용된다. 
 
-### 객체 지향 특징
-- 추상화
-- 캡슐화
-- 상속
-- 다형성
+유연하고 변경이 용이하다는 것은 레고 블럭을 조립하듯이 컴포넌트를 쉽게 변경하면서 개발하는 것을 의미하는데 이를 위해서는 `역할과 구현을 분리`해야 한다.
 
-### 객체 지향 프로그래밍
-- 컴퓨터 프로그램을 명령어의 목록으로 보는 시각에서 벗어나 여러 개의 독립된 단위, 즉 "객체"들의 모임으로 파악하고자 하는 것
-- 각각의 객체는 메시지를 주고받고, 데이터를 처리할 수 있다.
-- 객체 지향 프로그래밍은 프로그램을 유연하고 변경이 용이하게 만들기 때문에 대규모 소프트웨어 개발에 많이 사용
+역할과 구현의 분리는 인터페이스에는 역할에 대해서 정의하고, 구현 클래스에는 구체적인 수행 내용을 구현하도록 하면된다. 이렇게 역할과 구현을 분리하면 클라이언트는 인터페이스만 알면 구현체의 내용이 변경되거나 다른 구현체로 바뀌어도 영향을 받지 않는다. 
 
-### 유연하고 변경이 용이?
-- 레고 블럭 조립하듯이
-- 컴포넌트를 쉽고 유연하게 변경하면서 개발할 수 있는 방법
+### SOLID 원칙
+`SOLID`는 좋은 객체 지향 설계를 위해서 지켜야 할 5가지 원칙으로 다음과 같다.
 
-### 역할과 구현을 분리
-- 역할과 구현을 구분하면 세상이 단순해지고, 유연해지며 변경도 편리해짐
-- 장점
-  - 클라이언트는 대상의 역할(인터페이스)만 알면됨
-  - 클라이언트는 구현 대상의 내부 구조를 몰라도 됨
-  - 클라이언트는 구현 대상의 내부 구조가 변경되어도 영향을 받지 않음
-  - 클라이언트는 구현 대상 자체를 변경해도 영향을 받지 않음
-- 자바 언어의 다형성 활용
-  - 역할 = 인터페이스
-  - 구현 = 인터페이스를 구현한 클래스, 구현 객체
-- 객체를 설계할 때 역할과 구현을 명확히 분리
-- 객체 설계시 역할(인터페이스)을 먼저 부여하고, 그 역할을 수행하는 구현 객체 만들기
-- 인터페이스가 변경되지 않도록 잘 설계하는 것이 중요
+#### SRP(Single Responsibility Principle, 단일 책임 원칙)
+`한 클래스는 하나의 책임만 가져야 한다.`
 
-### 다형성의 본질
-- 인터페이스를 구현한 객체 인스턴스를 실행 시점에 유연하게 변경 가능
-- 다형성의 본질을 이해하려면 협력이라는 객체 사이의 관계에서 시작해야 함
-- 클라이언트를 변경하지 않고, 서버의 구현 기능을 유연하게 변경할 수 있다.
+책임의 중요한 기준은 변경으로, 변경이 있을 때 파급 효과가 적으면 단일 책임 원칙을 잘 따른 것이다.
 
-## 좋은 객체 지향 설계의 5가지 원칙(SOLID)
+#### OCP(Open/Closed Principle, 개방 폐쇄 원칙)
+`소프트웨어 요소는 확장에는 열려 있으나 변경에는 닫혀 있어야 한다.`
 
-### SRP(Single Responsibility Principle) 단일 책임 원책
-- 한 클래스는 하나의 책임만 가져야 함
-- 책임의 중요한 기준은 변경
-- 변경이 있을 때 파급 효과가 적으면 단일 책임 원칙을 잘 따른 것
+새로운 기능이 필요하면 기존 구현 클래스를 변경하는 것이 아니라 새로운 구현 클래스를 만들어 이 원칙을 지킬 수 있다. 하지만 구현 객체를 변경하려면 클라이언트 코드를 변경해야 하기 때문에 객체를 생성하고 연관 관계를 맺어주는 별도의 조립, 설정자가 필요하다.
 
-### OCP(Open/Closed Principle) 개방-폐쇄 원칙
-- 소프트웨어 요소는 확장에는 열려 있으나 변경에는 닫혀 있어야 함
-- 다형성 활용
-- 인터페이스를 구현한 새로운 클래스를 만들어서 새로운 기능 구현
-- 문제점
-  - `MemberRepository m = new MemoryMemberRepository(); //기존 코드`
-  - `MemberRepoisotry m = new JdbcMemberRepository(); //변경 코드`
-  - 구현 객체를 변경하려면 클라이언트 코드를 변경해야 함
-  - 객체를 생성하고 연관관계를 맺어주는 별도의 조립, 설정자 필요
+#### LSP(Liskov Substitution Principle, 리스코프 치환 원칙)
+`프로그램의 객체는 프로그램의 정확성을 깨뜨리지 않으면서 하위 타입의 인스턴스로 바꿀 수 있어야 한다.` 
 
-### LSP(Liskov Substitution Principle) 리스코프 치환 원칙
-- 프로그램의 객체는 프로그램의 정확성을 깨뜨리지 않으면서 하위 타입의 인스턴스로 바꿀 수 있어야 한다.
-- 다형성에서 하위 클래스는 인터페이스 규약을 다 지켜야 한다는 것
+다형성에서 하위 클래스는 인터페이스의 규약을 다 지켜야 한다는 것을 뜻한다. 예를 들어 인터페이스에 `moveUp` 이라는 위로 이동하는 기능이 정의되어 있는데 구현 클래스에서 `moveUp`의 기능을 아래로 이동하도록 구현하면 안된다는 것이다.
 
-### ISP(Interface Segregation Principle) 인터페이스 분리 원칙
-- 특정 클라이언트를 위한 인터페이스 여러 개가 범용 인터페이스 하나보다 낫다.
-- 인터페이스가 명확해지고, 대체 가능성이 높아짐
+#### ISP(Interface Segregation Principle, 인터페이스 분리 원칙)
+`특정 클라이언트를 위한 인터페이스 여러 개가 범용 인터페이스 하나보다 낫다.`
 
-### DIP(Dependency Inversion Principle) 의존관계 역전 원칙
-- 프로그래머는 추상화에 의존해야야지, 구체화에 의존하면 안된다.
-- 구현 클래스에 의존하지 말고, 인터페이스에 의존하라는 뜻
-- 다형성만으로는 지킬 수 없음
+인터페이스를 나눌 수록 인터페이스가 명확해지고, 대체 가능성이 높아진다.
+
+#### DIP(Dependency Inversion Principle, 의존 관계 역전 원칙)
+`프로그래머는 추상화에 의존해야지, 구체화에 의존하면 안된다.`
+
+구현 클래스에 의존하지 말고, 인터페이스에 의존하라는 뜻이다. 다형성만으로는 지키기 어렵다.
 
 ## 객체 지향 설계와 스프링
-
-### 스프링
-- 스프링은 다형성 + OCP, DIP를 가능하게 지원
-  - DI(Dependency Injection) : 의존관계, 의존성 주입
-  - DI 컨테이너 제공
-- 클라이언트 코드의 변경 없이 기능 확장
-- OCP, DIP 원칙을 지키면서 개발을 하기 위해 할 일이 너무 많음 -> 프레임워크로 만듦
+순수한 자바로 OCP(개방 폐쇄 원칙)와 DIP(의존 관계 역전 원칙)를 지키면서 개발을 하기 위해서는 해야 할 일이 너무 많다. 그래서 스프링 프레임워크는 `DI 컨테이너`를 제공해 OCP와 DIP를 지키며 클라이언트의 코드 변경 없이 기능 확장이 가능하도록 해준다.
