2. 예제 만들기 내용 수정

--- a/_posts/Lectures/스프링 핵심 원리 기본편/2023-05-24-2-예제-만들기.md
+++ b/_posts/Lectures/스프링 핵심 원리 기본편/2023-05-24-2-예제-만들기.md
@@ -13,6 +13,8 @@ tags: [Lectures, 스프링 핵심 원리 기본편]
 
 ## 프로젝트 생성
 ![image](https://github.com/dpdms529/SpringCore/assets/60471550/394ab566-6d6a-4e7b-9691-0180b44866e5)
+
+다음과 같이 설정해서 Generate 해준다.
 - Project : Gradle - Groovy
 - Language : Java
 - Spring Boot : SNAPSHOT, RC, M 등이 붙지 않은 버전 중 가장 높은 것
@@ -22,9 +24,10 @@ tags: [Lectures, 스프링 핵심 원리 기본편]
   - Artifact : core
 - Dependencies : X
 
+다운로드받은 파일의 압축을 푼 후 IntelliJ 같은 IDE로 프로젝트를 열어준다.
+
 ### 스프링 부트 3.0
-- Java 17 이상을 사용
-- javax -> jakarta
+스프링 부트 3.0을 사용하려면 Java 17 이상을 사용해야 한다. 또 javax 패키지를 jakarta로 바꿔서 사용해야 한다.
 
 ## 회원 서비스
 [구현 코드](https://github.com/dpdms529/SpringCore/commit/78e571dfdbf770b4ade937acf439797b67fc47a9)
