3. 객체 지향 원리 적용 수정

--- a/_posts/Lectures/스프링 핵심 원리 기본편/2023-05-24-2-예제-만들기.md
+++ b/_posts/Lectures/스프링 핵심 원리 기본편/2023-05-24-2-예제-만들기.md
@@ -30,11 +30,12 @@ tags: [Lectures, 스프링 핵심 원리 기본편]
 스프링 부트 3.0을 사용하려면 Java 17 이상을 사용해야 한다. 또 javax 패키지를 jakarta로 바꿔서 사용해야 한다.
 
 ## 회원 서비스
-[구현 코드](https://github.com/dpdms529/SpringCore/commit/78e571dfdbf770b4ade937acf439797b67fc47a9)
+{% linkpreview "https://github.com/dpdms529/SpringCore/commit/78e571dfdbf770b4ade937acf439797b67fc47a9" %}
 
-[테스트 코드](https://github.com/dpdms529/SpringCore/commit/577fa0e96dad172ed06b013f3ba670cca192da9a)
+{% linkpreview "https://github.com/dpdms529/SpringCore/commit/577fa0e96dad172ed06b013f3ba670cca192da9a" %}
 
 ## 주문 & 할인 서비스
-[구현 코드](https://github.com/dpdms529/SpringCore/commit/a761d4eded9c3e597454f632124acf9078453b5e)
+{% linkpreview "https://github.com/dpdms529/SpringCore/commit/a761d4eded9c3e597454f632124acf9078453b5e" %}
 
-[테스트 코드](https://github.com/dpdms529/SpringCore/commit/fbb8befacfcbf509909cad9eed01acc74873cb44)
+
+{% linkpreview "https://github.com/dpdms529/SpringCore/commit/fbb8befacfcbf509909cad9eed01acc74873cb44" %}
