강의 링크 추가

--- a/_posts/Lectures/스프링 핵심 원리 기본편/2023-06-07-8-빈-생명주기-콜백.md
+++ b/_posts/Lectures/스프링 핵심 원리 기본편/2023-06-07-8-빈-생명주기-콜백.md
@@ -9,6 +9,7 @@ use_math: true
 categories: [Lectures, 스프링 핵심 원리 기본편]
 tags: [Lectures, 스프링 핵심 원리 기본편]
 ---
+{% linkpreview "https://www.inflearn.com/course/%EC%8A%A4%ED%94%84%EB%A7%81-%ED%95%B5%EC%8B%AC-%EC%9B%90%EB%A6%AC-%EA%B8%B0%EB%B3%B8%ED%8E%B8" %}
 
 ## 빈 생명주기 콜백 시작
 {% linkpreview "https://github.com/dpdms529/SpringCore/commit/0f3d1de78f5b14aa2293c79d5f7e735dc264054e" %}
